--- a/MaterialDialogLibrary/src/main/res/values/styles.xml
+++ b/MaterialDialogLibrary/src/main/res/values/styles.xml
@@ -57,6 +57,8 @@
         <item name="bottomSheetStyle">@style/BottomSheet</item>
     </style>
 
-    <style name="BottomSheetDialogTheme" parent="BaseBottomSheetDialog"></style>
+    <style name="BottomSheetDialogTheme" parent="BaseBottomSheetDialog">
+
+    </style>
 
 </resources>
